# Threats2Power

./: .gitignore  DefaultNetworkSpecifications.json  Evaluation.ipynb  LICENSE  ParallelAnalyzer.py  ReadMe.md  RealNetworks.ipynb  SmartMeterNetworkSpecifications.json  attackers.py  comm_network.py  components.py  cyber.py  distributions.ipynb  experiment.py  network_specification.py  parallel.ipynb  pyproject.toml  requirements.txt  sandbox.ipynb  setup.py  tree.py  visualise.py  visualization.py
attackers/: interface.py  random_attacker.py
communication/: components.py  network.py
cyber/: analysis.py  assets.py  components.py  criticality.py
data/: .gitignore  Budget--children_per_parent_3-effort_only_True.npz  siblings.npz
procedural/: generation.py
specifications/: Default_specifications.json  Protection_specifications.json  SCADA_specifications.json  SmartMeter_specifications.json  WAMS_specifications.json
threats2power/: __init__.py
threats2power/attackers/: __init__.py  interface.py  random_attacker.py
threats2power/communication/: __init__.py  components.py  graph.py  network.py
threats2power/cyber/: __init__.py  analysis.py  assets.py  criticality.py
threats2power/procedural/: __init__.py  generation.py  specification.py
threats2power/visualization/: __init__.py  grid.py  network.py  patches.py
visualization/: grid.py  network.py  patches.py
