[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Threats2Power"
version = "0.0.1"
authors = [
  { name="Xavier Weiss", email="xavierw@kth.se" },
]
description = "Threats2Power provides a high-level, abstract, representation of the communication network for power systems."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC-BY-NC 4.0 License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/DEUCE1957/Threats2Power"
Issues = "https://github.com/DEUCE1957/Threats2Power/Issues"